--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
+  "name": "short_url",
+  "version": "1.0.0",
+  "description": "Shotrten url server",
+  "main": "index.js",
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.10.0"
+  },
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server"
   },
+  "author": "Akshay Kumar",
+  "license": "ISC",
+  "homepage": "",
   "dependencies": {
-    "@chakra-ui/react": "^2.1.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.27.2",
-    "dotenv": "^16.3.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.14.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.9"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4",
+    "nodemon": "^3.0.1",
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   }
 }
